# ancdec

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: ancdec_bench.rs
src/: cross_ops.rs  error.rs  lib.rs  round_mode.rs  util.rs  wide.rs
src/ancdec/: arithmetic.rs  basic.rs  cmp.rs  convert.rs  fmt_impl.rs  mod.rs  ops.rs  rounding.rs  serde_impl.rs  sqlx_impl.rs
src/ancdec128/: arithmetic.rs  basic.rs  cmp.rs  convert.rs  fmt_impl.rs  mod.rs  ops.rs  rounding.rs  serde_impl.rs
src/ancdec32/: arithmetic.rs  basic.rs  cmp.rs  convert.rs  fmt_impl.rs  mod.rs  ops.rs  rounding.rs  serde_impl.rs
src/ancdec8/: arithmetic.rs  basic.rs  cmp.rs  convert.rs  fmt_impl.rs  mod.rs  ops.rs  rounding.rs  serde_impl.rs
tests/: ancdec128_tests.rs  ancdec32_tests.rs  ancdec8_tests.rs  ancdec_tests.rs
