[package]
name = "ancdec"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Fast, precise fixed-point decimal with independent 19+19 digit precision"
repository = "https://github.com/ktg0413/ancdec"
keywords = ["decimal", "fixed-point", "no_std", "finance", "arithmetic"]
categories = ["no-std", "mathematics", "finance"]
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]
sqlx = ["dep:sqlx", "std"]
std = []

[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["postgres", "runtime-tokio"] }

[[bench]]
name = "ancdec_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
rust_decimal = "1.33"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
