[package]
name = "ancdec"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Fast, precise fixed-point decimal with independent int/frac storage (u64: 19+19, u128: 38+38 digits)"
repository = "https://github.com/ktg0413/ancdec"
keywords = ["decimal", "numeric", "precision", "exact-arithmetic", "scientific"]
categories = ["no-std", "mathematics", "science", "simulation", "embedded"]
readme = "README.md"

[features]
default = ["dec8", "dec32", "dec64", "dec128"]
dec8 = []
dec32 = []
dec64 = []
dec128 = []
serde = ["dep:serde"]
sqlx = ["dep:sqlx", "std", "dec64"]
std = []

[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["postgres", "runtime-tokio"] }

[[bench]]
name = "ancdec_bench"
harness = false

[dev-dependencies]
criterion = "0.5"
rust_decimal = { version = "1.33", features = ["maths"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
